# hachimi_music

./: .gitignore  README.md  pyproject.toml
config/: settings.yaml
frontend/: app.js  index.html  style.css
hachimi/: __init__.py
hachimi/api/: app.py  routes.py
hachimi/conversion/: abc_to_midi.py  instrument_mapper.py
hachimi/core/: config.py  database.py  pipeline.py  project.py  schemas.py  version.py
hachimi/generation/: llm_generator.py
hachimi/generation/prompts/: audio_feedback.txt  compose_abc.txt  compose_meta.txt  compose_system.txt  compose_user.txt  fix_error.txt  refine.txt  suggest_params.txt
hachimi/synthesis/: fluidsynth_renderer.py  postprocess.py
scripts/: download_soundfonts.py  generate.py  install_fluidsynth.py  migrate_to_sqlite.py
tests/: test_api.py  test_config.py  test_conversion.py  test_generation.py  test_instrument_mapper.py  test_project_db.py  test_schemas.py  test_version.py
